Fix BM External Link page 2.0 text wrapping (#2255)
* updated styles for external link page text wrapping

* fixed modal resizing; updated styles for external link

* Update ExternalRoom.scss

* fixed link with getExtraLinkProps

--- a/src/components/templates/ExternalRoom/ExternalRoom.scss
+++ b/src/components/templates/ExternalRoom/ExternalRoom.scss
@@ -2,15 +2,24 @@
 
 $border-radius: 22px;
 $spacing: 20px;
+$text-width: 50rem;
 
 .ExternalRoom {
-  height: 100%;
+  min-height: 100%;
+  padding-bottom: $spacing--xxl;
   display: flex;
   background-position: center;
   background-size: cover;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
+  &__link {
+    max-width: $text-width;
+
+    text-align: center;
+    overflow-wrap: break-word;
+  }
 
   &__message {
     display: flex;
@@ -74,11 +83,13 @@ $spacing: 20px;
     border-radius: $border-radius;
 
     max-height: 25vh;
+    max-width: $text-width;
     overflow-y: auto;
 
     font-size: $font-size--md;
     font-weight: $font-weight--400;
     color: opaque-white(0.6);
+    overflow-wrap: break-word;
   }
 
   &__userlist {
